--- a/src/App.css
+++ b/src/App.css
@@ -3,26 +3,15 @@
   margin: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Episode {
+  color: royalblue;
+  font-size: large;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+li {
+  color: black;
+  font-size: medium;
+  padding-top: 5px;
 }
 
 @keyframes App-logo-spin {
